--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/print-styles.css" media="print" />
     
     <!-- Sitemap -->
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
