Fix export tools and update UI - Remove Watch Demo button, add Source Code link, fix print/PDF/DOCX/image exports

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/layout-fixes.css" />
     <link rel="stylesheet" href="/print-styles.css" media="print" />
     
     <!-- Sitemap -->
